--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <script>
         // Redirecionamento após 1 segundo para garantir que o Pixel carregue
         setTimeout(function() {
-            window.location.href = "https://acesse.one/acessarseuproduto";
+            window.location.href = "https://acesse.one/baixeaquimensagensmagneticas";
         }, 1000);
     </script>
 </head>
